# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-2.0.46-r2 (18 Dec 2002): Feature Stable Release Prelink + Bug Fixes

  18 Dec 2002; Nicholas Jones <carpaski@gentoo.org> portage.py, emerge:
  Traceback fix for blocking packages in the restart check in emerge. Added
  missing import for commands in portage.py.

*portage-2.0.46 (18 Dec 2002): Feature Stable Release Prelink + Bug Fixes

  18 Dec 2002; Nicholas Jones <carpaski@gentoo.org> portage.py:
  PRELINK_MASK adds ignore paths for prelink.conf. Error message
  adjustments for appearance/readability. auxdbkey changes.

  18 Dec 2002; Nicholas Jones <carpaski@gentoo.org> emerge:
  --changelog displays changelogs of packages on update. gcc version
  fix for --version. Missing indent in masked output corrected. Some
  color additions. Prelink code removed -- Users can do it instead.

  18 Dec 2002; Nicholas Jones <carpaski@gentoo.org> ebuild.sh:
  use_{enable,with}() work now. Rearranged auxdbkeys again.
	
  17 Dec 2002; Martin Schlemmer <azarah@gentoo.org> bin/ebuild.sh:
  Regenerate /lib/cpp and /usr/bin/cc in pkg_setup if they are not
  files to ease the broken pkg_postrm() some gcc have.

*portage-2.0.46_pre2 (15 Dec 2002): Feature Prerelease: prelink

  15 Dec 2002; Nicholas Jones <carpaski@gentoo.org> emerge/portage.py:
  Fixups. PRELINK_MASK code. 'prelink -af' in post_emerge().

  15 Dec 2002; Mark Guertin <gerk@gentoo.org> cnf.make.conf.ppc:
  updated incorrect CFLAG option and appended -mabi=altivec info

*portage-2.0.46_pre1 (15 Dec 2002): Feature Prerelease: prelink

  15 Dec 2002; Nicholas Jones <carpaski@gentoo.org> portage.py: Counter
  fixups. Prelink code.

  15 Dec 2002; Nicholas Jones <carpaski@gentoo.org> bin/f*: Made them
  loop over multiple files instead of just doing one.

  13 Dec 2002; Nicholas Jones <carpaski@gentoo.org> emerge/portage.py: